--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <!--Links-->
+    <link rel="stylesheet" href="components/header/header.css">
+    <link rel="stylesheet" href="module/item/itemModulo.css">
     <link rel="stylesheet" href="config.css">
 </head>
 <body>
     <script src="main.js" type="module"> </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
 </body>
 </html>
